--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-15  Eric Blake  <ebb9@email.byu.edu>
+
+	* THANKS: Fix punctuation, alphabetization.
+
 2002-03-15  Tom Tromey  <tromey@redhat.com>
 	    Rainer Orth <ro@TechFak.Uni-Bielefeld.DE>
 	
