--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-15  Alexandre Oliva  <aoliva@redhat.com>
+
+	* Makefile.am (jv_convert_LDADD): Don't list libraries that are
+	already implicitly brought in from libgcj.la.
+	(gij_LDADD, rmic_LDADD, rmiregistry_LDADD): Likewise.
+	* Makefile.in: Rebuilt.
+
 2002-03-15  Eric Blake  <ebb9@email.byu.edu>
 
 	* THANKS: Fix punctuation, alphabetization.
