* config/alpha/alpha.c (alpha_va_arg): Manipulate the type         size as a tree.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50857 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-15  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.c (alpha_va_arg): Manipulate the type
+	size as a tree.
+
 2002-03-15  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
 
 	* config/m68hc11/m68hc11.md ("tstqi_1"): Try to use ldab instead of tst.
