Add embedded patch approved Feb 17
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50859 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-15  Anthony Green  <green@redhat.com>
+
+	* configure.host (FILE): New macro for specifing File
+	implementation.
+	* configure: Rebuilt.
+	* configure.in: Use FILE.  Define HAVE_TIME for newlib targets.
+
 2002-03-15  Alexandre Oliva  <aoliva@redhat.com>
 
 	* Makefile.am (jv_convert_LDADD): Don't list libraries that are
