* c-common.c (statement_code_p): Handle CLEANUP_STMT. 	* c-common.def (CLEANUP_STMT): New tree node. 	* c-common.h (CLEANUP_DECL): New macro. 	(CLEANUP_EXPR): Likewise. 	* c-semantics.c (expand_stmt): Handle CLEANUP_STMT. 	* tree-dump.c (dequeue_and_dump): Handle CLEANUP_STMT. 	* tree-inline.c (initialize_inlined_parameters): Clean up 	new local variables.
	* cp-tree.h (CLEANUP_DECL): Remove.
	(CLEANUP_EXPR): Likewise.
	* decl.c (destroy_local_var): Simplify.
	(maybe_build_cleanup): Tidy.
	* dump.c (cp_dump_tree): Remove handling of CLEANUP_STMT.
	* semantics.c (cp_expand_stmt): Likewise.
	* cp/tree.c (cp_statement_code_p): Likewise.

	* g++.dg/opt/dtor1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50864 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2002-03-15  Mark Mitchell  <mark@codesourcery.com>
+
+	* expr.c (expand_expr): Revert previous change.
+
+	* c-common.c (statement_code_p): Handle CLEANUP_STMT.
+	* c-common.def (CLEANUP_STMT): New tree node.
+	* c-common.h (CLEANUP_DECL): New macro.
+	(CLEANUP_EXPR): Likewise.
+	* c-semantics.c (expand_stmt): Handle CLEANUP_STMT.
+	* expr.c (expand_expr): Tidy.
+	* tree-dump.c (dequeue_and_dump): Handle CLEANUP_STMT.
+	* tree-inline.c (initialize_inlined_parameters): Clean up
+	new local variables.
+
 2002-03-15  Richard Henderson  <rth@redhat.com>
 
 	* c-decl.c: Include c-pragma.h.
