* decl.c (finish_function): Reapply accidentally reverted         2002-02-28 patch.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50865 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-15  Richard Henderson  <rth@redhat.com>
+
+	* decl.c (finish_function): Reapply accidentally reverted
+	2002-02-28 patch.
+
 2002-03-15  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (CLEANUP_DECL): Remove.
