--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-15  Richard Henderson  <rth@redhat.com>
 
+	* init.c (build_new_1): Use size_binop instead of cp_build_binary_op.
+
+2002-03-15  Richard Henderson  <rth@redhat.com>
+
 	* decl.c (finish_function): Reapply accidentally reverted
 	2002-02-28 patch.
 
