--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-15  Richard Henderson  <rth@redhat.com>
+
+	* init.c (build_new_1): Use size_binop instead of cp_build_binary_op.
+
 2002-03-15  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (CLEANUP_DECL): Remove.
