--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-03-16  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* cppinit.c (print_help): Display -MD and -MMD.
+	Don't display usage string.  Update assertion syntax and
+	typo.
+	(COMMAND_LINE_OPTIONS): Remove OPT_MD, OPT_MMD.
+	(cpp_handle_option): Update.
+
 2002-03-15  Chris Demetriou  <cgd@broadcom.com>
 
 	* config/mips/mips.h (SUBTARGET_CPP_SIZE_SPEC): Provide an
