* cfgcleanup.c (cleanup_cfg): Fix updating of liveness.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50876 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar 16 12:57:28 CET 2002  Jan HUbicka  <jh@suse.cz>
+
+	* cfgcleanup.c (cleanup_cfg): Fix updating of liveness.
+
 2002-03-16  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cppinit.c (print_help): Display -MD and -MMD.
