* config/m68hc11/m68hc11.md ("*movqi_68hc12"): Fix constraints, avoid 	allocating QImode in address registers. 	("*movqi_m68hc11"): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50878 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/m68hc11/m68hc11.md
+++ b/gcc/config/m68hc11/m68hc11.md
@@ -1019,9 +1019,9 @@
 
 (define_insn "*movqi_68hc12"
   [(set (match_operand:QI 0 "nonimmediate_operand" 
-				"=d*AU*q,d*A*q,*u,d*A*q,m,m")
+				"=U,d*AU*q,d*A*qU,*u,d*A*q,m,m")
 	(match_operand:QI 1 "general_operand" 
-				"*ri*q,U,*ri*qU,m,d*q,!A"))]
+				"U,*ri*q,U,*ri*qU,m,d*q,!*A"))]
   "TARGET_M6812"
   "*
 {
@@ -1030,8 +1030,8 @@
 }")
 
 (define_insn "*movqi_m68hc11"
-  [(set (match_operand:QI 0 "nonimmediate_operand" "=dA*q,m,m,dA*q,*u")
-	(match_operand:QI 1 "general_operand" "dAim*q,d*q,!A,*u,dA*q"))]
+  [(set (match_operand:QI 0 "nonimmediate_operand" "=d*A*q,m,m,d*A*q,*u")
+	(match_operand:QI 1 "general_operand" "d*Aim*q,d*q,!*A,*u,d*A*q"))]
   "TARGET_M6811"
   "*
 {
