--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-16  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
+
+	* config/m68hc11/m68hc11.md ("*movqi_68hc12"): Fix constraints, avoid
+	allocating QImode in address registers.
+	("*movqi_m68hc11"): Likewise.
+
 Sat Mar 16 12:57:28 CET 2002  Jan HUbicka  <jh@suse.cz>
 
 	* cfgcleanup.c (cleanup_cfg): Fix updating of liveness.
