--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-03-16  Alexandre Oliva  <aoliva@redhat.com>
 
+	* config/mips/mips.h (ISA_HAS_COND_TRAP): Not available on MIPS16.
+	* config/mips/mips.md (trap) [TARGET_MIPS16]: Emit `break 0'.
+
 	* config/mips/mips.md (addsi3, adddi3): Use scratch register to
 	add register to non-constant into sp.
 
