--- a/gcc-3_1-branch/boehm-gc/ChangeLog
+++ b/gcc-3_1-branch/boehm-gc/ChangeLog
@@ -21,6 +21,11 @@
 	* include/gc_priv.h: Define ALIGN_DOUBLE on 32 bit targets if GCJ 
 	support is enabled, for hash synchronization.
 
+2002-03-17  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* Makefile.am: Make a convenience library.
+	* Makefile.in: Rebuilt.
+
 2002-02-24  Adam Megacz  <adam@xwt.org>
 
 	* Makefile.am: Added win32_threads.c to sources list.
