--- a/gcc-3_1-branch/libffi/ChangeLog
+++ b/gcc-3_1-branch/libffi/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-17  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* Makefile.am: libfficonvenience -> libffi_convenience.
+	* Makefile.in: Rebuilt.
+
 2002-03-07  Andreas Tobler  <toa@pop.agri.ch>
 	    David Edelsohn  <edelsohn@gnu.org>
 
