* Makefile.am: Define ffitest_OBJECTS. 	* Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50903 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libffi/ChangeLog
+++ b/gcc-3_1-branch/libffi/ChangeLog
@@ -2,6 +2,9 @@
 
 	* Makefile.am: libfficonvenience -> libffi_convenience.
 	* Makefile.in: Rebuilt.
+	
+	* Makefile.am: Define ffitest_OBJECTS.
+	* Makefile.in: Rebuilt.
 
 2002-03-07  Andreas Tobler  <toa@pop.agri.ch>
 	    David Edelsohn  <edelsohn@gnu.org>
