* Makefile.am: Escape quotes in echo. 	* Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50905 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -8,6 +8,9 @@
 	* Makefile.in: Rebuilt.
 	* libtool-version: Increment .so version number.
 
+	* Makefile.am: Escape quotes in echo.
+	* Makefile.in: Rebuilt.
+
 2002-03-16  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* Makefile.am: Use empty -classpath flag in addition to -bootclasspath.
