* Makefile.am: Escape quotes in echo. 	* Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50906 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -46,6 +46,9 @@
 	* gcj/Makefile: Rebuilt.
 	* gcj/libgcj-config.h: Add warning comment.
 
+	* Makefile.am: Escape quotes in echo.
+	* Makefile.in: Rebuilt.
+
 2002-03-12  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	* configure.host (powerpc*-darwin*): Enable interpreter.
