--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-17  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* config/mmix/mmix.h (WCHAR_TYPE, WCHAR_TYPE_SIZE): Don't define.
+
 2002-03-16  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/mips/mips.h (CAN_ELIMINATE): Don't eliminate rap to $fp
