--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-17  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* gcc.dg/cpp/wchar-1.c: Update.
+
 2002-03-16  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/template/conv1.C: New test.
