--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/5757
+	* init.c (build_new_1): Pass the right pointer to op delete.
+
 2002-03-16  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/4361
