--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/5757
+	* init.c (build_new_1): Pass the right pointer to op delete.
+
 2002-03-15  Richard Henderson  <rth@redhat.com>
 
 	* init.c (build_new_1): Use size_binop instead of cp_build_binary_op.
