--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-16  Richard Henderson  <rth@redhat.com>
+
+	* config/ia64/ia64.c (ia64_attribute_table): Move before
+	targetm definition.  Make static.
+
 2002-03-16  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cppinit.c (print_help): Display -MD and -MMD.
