* c-common.h (yyparse, c_common_parse_file): New. 	* c-lang.c: Include c-common.h. 	(LANG_HOOKS_PARSE_FILE): Redefine. 	* c-lex.c: Include c-common.h. 	(yyparse): Rename c_common_parse_file.  Call yyparse. 	* c-parse.in (yyparse): Remove macro. 	* c-tree.h (yyparse_1): Remove. 	* langhooks-def.h (LANG_HOOKS_PARSE_FILE): New. 	(LANG_HOOKS_INITIALIZER): Update. 	* langhooks.h (struct lang_hoooks): New hook parse_file. 	* toplev.c (compile_file): Use parse_file hook. 	* tree.h (yyparse): Remove. ada: 	* misc.c (LANG_HOOKS_PARSE_FILE): Redefine. 	(yyparse): Rename gnat_parse_file. cp: 	* cp-lang.c (LANG_HOOKS_PARSE_FILE): Redefine. 	* parse.y (yyparse): Remove macro. f: 	* com.c (LANG_HOOKS_PARSE_FILE): Redefine. 	* com.h (ffe_parse_file): New. 	* parse.c (NAME_OF_STDIN): Remove. 	(yyparse): Rename ffe_parse_file. java: 	* java-tree.h (java_parse_file): New. 	* jcf-parse.c (yyparse): Rename java_parse_file. 	* lang.c (LANG_HOOKS_PARSE_FILE): Redefine. objc: 	* objc-lang.c (LANG_HOOKS_PARSE_FILE): Redefine.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50926 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,20 @@
+2002-03-17  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* c-common.h (yyparse, c_common_parse_file): New.
+	* c-lang.c: Include c-common.h.
+	(LANG_HOOKS_PARSE_FILE): Redefine.
+	* c-lex.c: Include c-common.h.
+	(yyparse): Rename c_common_parse_file.  Call yyparse.
+	* c-parse.in (yyparse): Remove macro.
+	* c-tree.h (yyparse_1): Remove.
+	* langhooks-def.h (LANG_HOOKS_PARSE_FILE): New.
+	(LANG_HOOKS_INITIALIZER): Update.
+	* langhooks.h (struct lang_hoooks): New hook parse_file.
+	* toplev.c (compile_file): Use parse_file hook.
+	* tree.h (yyparse): Remove.
+objc:
+	* objc-lang.c (LANG_HOOKS_PARSE_FILE): Redefine.
+
 2002-03-17  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* config/mmix/mmix.md ("truncdfsf2"): Correct operator is
