--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-17  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* cp-lang.c (LANG_HOOKS_PARSE_FILE): Redefine.
+	* parse.y (yyparse): Remove macro.
+
 2002-03-17  Jason Merrill  <jason@redhat.com>
 
 	PR c++/5757
