--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/4460
+	* class.c (build_base_path): Virtual base layout is fixed in
+	in-charge [cd]tors.
+
 2002-03-17  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cp-lang.c (LANG_HOOKS_PARSE_FILE): Redefine.
