* jcf-parse.c (get_constant): Delete unused variables.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50933 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* jcf-parse.c (get_constant): Delete unused variables.
+
 2002-03-17  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* java-tree.h (java_parse_file): New.
