--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* predict.c (estimate_bb_frequencies): Delete unused variables.
+
 2002-03-17  Richard Henderson  <rth@redhat.com>
 
 	* config/ia64/ia64.c (ia64_attribute_table): Move before
