--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,11 @@
+2002-03-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/4381
+	* libsupc++/eh_personality.cc (get_adjusted_ptr): New static fn.
+	(check_exception_spec): Call it.  Take the thrown pointer.
+	(__cxa_call_unexpected): Pass it.
+	(PERSONALITY_FUNCTION): Likewise.  Use get_adjusted_ptr.
+
 2002-03-16  Paolo Carlini  <pcarlini@unitus.it>
 
 	* testsuite/22_locale/collate_members_char.cc
