--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* ifcvt.c (dead_or_predicable): Fix uninitialized variable.
+
 2002-03-17  David Edelsohn  <edelsohn@gnu.org>
 
 	* expr.c (expand_expr): Sign-extend CONST_INT generated from
