* config/mmix/mmix.md ("fixuns_truncdfdi2"): Use (unsigned_fix:DI 	(unsigned_fix:DF op1)), not (unsigned_fix:DI (fix:DF op1)).
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50940 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-17  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* config/mmix/mmix.md ("fixuns_truncdfdi2"): Use (unsigned_fix:DI
+	(unsigned_fix:DF op1)), not (unsigned_fix:DI (fix:DF op1)).
+
 2002-03-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* ifcvt.c (dead_or_predicable): Fix uninitialized variable.
