--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-17  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.c (alpha_emit_set_const_1): Build add insns
+	explicitly.
+
 2002-03-17  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* config/mmix/mmix.md ("fixuns_truncdfdi2"): Use (unsigned_fix:DI
