2002-03-18  Aldy Hernandez  <aldyh@redhat.com>
        * config/rs6000/rs6000.h (PREDICATE_CODES): Add PARALLEL to
        any_operand.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50943 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-18  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config/rs6000/rs6000.h (PREDICATE_CODES): Add PARALLEL to
+        any_operand.
+
 2002-03-17  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.c (alpha_emit_set_const_1): Build add insns
