* parse.y (parser_check_super_interface): Fix error message 	grammar/order.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50954 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-18  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* parse.y (parser_check_super_interface): Fix error message
+	grammar/order.
+
 2002-03-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* jcf-parse.c (get_constant): Delete unused variables.
