--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-18  Jason Merrill  <jason@redhat.com>
+
+	PR c++/3948 -- C++ ABI change, followup to 2001-12-18 patch.
+	* class.c (finish_struct_bits): Also set TREE_ADDRESSABLE for a
+	type with a nontrivial destructor.
+
 2002-03-17  Jason Merrill  <jason@redhat.com>
 
 	PR c++/4460
