--- a/gcc/cp/NEWS
+++ b/gcc/cp/NEWS
@@ -42,7 +42,10 @@
 
 * The C++ ABI has been changed so that when a parameter is passed by value,
   any cleanup for that parameter is performed in the caller, as specified
-  by the ia64 C++ ABI, rather than the called function as before.
+  by the ia64 C++ ABI, rather than the called function as before.  As a
+  result, classes with a non-trivial destructor but a trivial copy
+  constructor will be passed and returned by invisible reference, rather
+  than by bitwise copy as before.
 
 * G++ now supports the "named return value optimization":  for code like
 
