--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2002-03-18  Jason Merrill  <jason@redhat.com>
 
+	PR c++/3870
+	* cp-tree.h (struct saved_scope): Add last_parms field.
+	* decl.c (maybe_push_to_top_level): Save last_function_parms.
+	(pop_from_top_level): Restore it.
+
 	PR c++/4377
 	* mangle.c (write_expression): Strip NOP_EXPRs sooner.  Also strip
 	NON_LVALUE_EXPRs.
